TAXII: Select a poll result to load a preview

--- a/taxii_service/templates/taxii_agent_results.html
+++ b/taxii_service/templates/taxii_agent_results.html
@@ -210,3 +210,29 @@
 {% endwith %}
 {% endif %}
 {% endblock %}
+
+<script>
+    $('a.pollid').click(function() {
+        $("#current_state").text("Processing...");
+        $("#taxii-loader").show();
+        var pid = $(this).attr('id');
+        $.ajax({
+            type: "GET",
+            url: "{% url 'taxii_service.views.get_import_preview' '1234' '1' '10' %}".replace("1234", pid),
+        }).done(function(data) { // run on successful request
+            if (data.success) { // at least some feeds were successfully processed
+                $("#results_container").html(data.html);
+                $("#current_state").text("STIX Import Preview");
+                $("#view_saved").prop('hidden', false);
+            } else { // some issue occurred
+                $("#error_container").children(".taxii_notice").html(data.msg);
+                $("#current_state").text("Problems");
+            }
+        }).fail(function(data) { // server error
+            $("#error_container").children(".taxii_notice").text("An unexpected server error occurred - notify an administrator.");
+            $("#current_state").text("Problems");
+        }).always(function() {
+            $("#taxii-loader").hide();
+        });
+    });
+</script>
