--- a/taxii_service/templates/taxii_agent_form.html
+++ b/taxii_service/templates/taxii_agent_form.html
@@ -36,6 +36,7 @@
 			</table>
 
             <strong class="taxii_ctype_label required">
+                {{ form.import_all }} {{ form.import_all.label }}<br><br>
                 {{ form.use_last }} {{ form.use_last.label }}
             </strong>
 
