--- a/taxii_service/templates/taxii_agent_preview.html
+++ b/taxii_service/templates/taxii_agent_preview.html
@@ -2,56 +2,10 @@
 
 {% block content %}
 
-{% if poll_msg %}
-<div class="content_box">
-    <h3 class="titleheader">
-        Status: <b>{% if status %}Success{% else %}Failure{% endif %}</b>
-    </h3>
-    <div class="content_body">
-        {% if status %}Message:{% else %}Reason:{% endif %} {{ poll_msg }}
-    </div>
-</div>
-<br>
-<table class="chart" id="poll_data" width="100%" style="margin-bottom: 15px;">
-    <colgroup>
-        <col>
-        <col>
-        <col>
-        <col>
-        <col>
-        <col>
-        <col>
-    </colgroup>
-    <thead>
-        <th>Hostname</th>
-        <th>Feed Name</th>
-        <th>Message ID</th>
-        <th>Block Count</th>
-        <th>Start</th>
-        <th>End</th>
-        <th>Status</th>
-    </thead>
-    <tbody>
-    {% for poll in polls %}
-        <tr>
-            <td>{{ poll.hostname }}</td><td>{{ poll.feed }}</td>
-            <td>{{ poll.mid }}</td><td>{{ poll.blk_count }}</td>
-            <td>{{ poll.start }}</td><td>{{ poll.end }}</td>
-            {% if poll.success %}
-                <td><font color="green">Poll Successful</font></td>
-            {% else %}
-                <td><font color="red">{{ poll.msg }}</font></td>
-            {% endif %}
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-{% else %}
 <div style="text-align: center; padding-bottom: 10px; margin-top: 15px;">
 	<button id="import_delete" class="import_btn">Import Selected & Delete Others</button>
 	<button id="import_keep" class="import_btn">Import Selected & Keep Others</button>
 </div>
-{% endif %}
 
 <style>
     #poll_data tbody td:nth-child(2) {
@@ -312,7 +266,7 @@
 		}).done(function(data) { // run on successful request
 			if (data.success) { // at least some feeds were successfully processed
 				$("#results_container").html(data.html);
-				$("#current_state").text("TAXII Import Results");
+				$("#current_state").text("STIX Import Results");
                 $("#view_saved").prop('hidden', false);
 				$("#results_container").slideToggle();
 			} else { // some issue occurred
