--- a/taxii_service/templates/taxii_agent_results.html
+++ b/taxii_service/templates/taxii_agent_results.html
@@ -1,7 +1,55 @@
 
 
 {% block content %}
+{% if poll_msg %}
+<div class="content_box">
+    <h3 class="titleheader">
+        Status: <b>{% if status %}Success{% else %}Failure{% endif %}</b>
+    </h3>
+    <div class="content_body">
+        {% if status %}Message:{% else %}Reason:{% endif %} {{ poll_msg }}
+    </div>
+</div>
+<br>
+<table class="chart" id="poll_data" width="100%" style="margin-bottom: 15px;">
+    <colgroup>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+    </colgroup>
+    <thead>
+        <th>Hostname</th>
+        <th>Feed Name</th>
+        <th>Message ID</th>
+        <th>Block Count</th>
+        <th>Start</th>
+        <th>End</th>
+        <th>Status</th>
+    </thead>
+    <tbody>
+    {% for poll in polls %}
+        <tr>
+            <td>{{ poll.hostname }}</td><td>{{ poll.feed }}</td>
+            <td><a class="pollid" href="#" id="{{ poll.poll_id }}">{{ poll.mid }}</a></td>
+            <td>{{ poll.blk_count }}</td>
+            <td>{{ poll.start }}</td><td>{{ poll.end }}</td>
+            {% if poll.success %}
+                <td><font color="green">Poll Successful</font></td>
+            {% else %}
+                <td><font color="red">{{ poll.msg }}</font></td>
+            {% endif %}
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+{% endif %}
 
+{% if imported %}
+{% with result=imported %}
 <style>
     #ta_results tbody td:nth-child(2) {
         text-align: center;
@@ -159,5 +207,6 @@
         </tbody>
     </table>
 </div>
-
+{% endwith %}
+{% endif %}
 {% endblock %}
