TAXII: Bulk STIX Zip Upload & STIX header info source option

--- a/taxii_service/templates/resources/taxii_style_tag.html
+++ b/taxii_service/templates/resources/taxii_style_tag.html
@@ -11,10 +11,15 @@
 		width: 300px;
 		margin-bottom: 10px;
 	}
-	#taxii_form_table input {
+	#taxii_form_table input:not([type="checkbox"]) {
 		max-width: 100%;
 		width: 300px;
+	}
+	#taxii_form_table input {
 		margin-bottom: 10px;
+	}
+	#stix_src_fields select {
+		margin-bottom: 0px;
 	}
 	.taxii-table {
 		width: 100%;
