--- a/taxii_service/templates/taxii_agent_preview.html
+++ b/taxii_service/templates/taxii_agent_preview.html
@@ -56,19 +56,19 @@
         <col>
     </colgroup>
     <thead>
-        <th>Timestamp</th>
+        <th>Poll/Upload Time (UTC)</th>
         <th>Msg ID or Reference</th>
         <th>Block Count</th>
         <th>Source</th>
         <th>Feed or File Name</th>
-        <th>Time Range</th>
+        <th>Time Range (UTC)</th>
         <th>Analyst</th>
     </thead>
     <tbody>
         <tr>
             <td>{{ poll.poll_time }}</td><td>{{ poll.taxii_msg_id }}</td>
-            <td>{{ poll.blocks|length }}</td><td>{{ poll.source }}</td>
-            <td>{{ poll.feed }}</td><td>{{ poll.start }} to {{ poll.end }}</td>
+            <td>{{ poll.block_count }}</td><td>{{ poll.source }}</td>
+            <td>{{ poll.feed }}</td><td>{{ poll.timerange }}</td>
             <td>{{ poll.analyst }}</td>
         </tr>
     </tbody>
