--- a/taxii_service/templates/taxii_saved_polls.html
+++ b/taxii_service/templates/taxii_saved_polls.html
@@ -33,19 +33,19 @@
                 <col width="120px">
             </colgroup>
             <thead>
-                <th>Timestamp</th>
+                <th>Poll/Upload Time (UTC)</th>
                 <th>Msg ID or Reference</th>
                 <th>Block Count</th>
                 <th>Source</th>
                 <th>Feed or File Name</th>
-                <th>Time Range</th>
+                <th>Time Range (UTC)</th>
                 <th>Analyst</th>
                 <th>Actions</th>
             </thead>
             <tbody>
-                {% for time, meta in upolls.items %}
+                {% for meta in upolls %}
                 <tr>
-                    <td><a class="pollid" href="#" id="{{ meta.poll_id }}">{{ time }}</a></td>
+                    <td><a class="pollid" href="#" id="{{ meta.poll_id }}">{{ meta.time }}</a></td>
                     <td>{{ meta.msg_id }}</td>
                     <td>{{ meta.count }}</td><td>{{ meta.source }}</td>
                     <td>{{ meta.feed }}</td><td>{{ meta.timerange }}</td>
@@ -78,19 +78,19 @@
                 <col width="120px">
             </colgroup>
             <thead>
-                <th>Timestamp</th>
+                <th>Poll/Upload Time (UTC)</th>
                 <th>Msg ID or Reference</th>
                 <th>Block Count</th>
                 <th>Source</th>
                 <th>Feed or File Name</th>
-                <th>Time Range</th>
+                <th>Time Range (UTC)</th>
                 <th>Analyst</th>
                 <th>Actions</th>
             </thead>
             <tbody>
-                {% for time, meta in epolls.items %}
+                {% for meta in epolls %}
                 <tr>
-                    <td><a class="pollid" href="#" id="{{ meta.poll_id }}">{{ time }}</a></td>
+                    <td><a class="pollid" href="#" id="{{ meta.poll_id }}">{{ meta.time }}</a></td>
                     <td>{{ meta.msg_id }}</td>
                     <td>{{ meta.count }}</td><td>{{ meta.source }}</td>
                     <td>{{ meta.feed }}</td><td>{{ meta.timerange }}</td>
